[tool.poetry]
name = "agent"
version = "0.1.0"
description = "Single LangGraph agent"
authors = ["you"]
packages = [{ include = "agent" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
